syntax = "proto2";
option java_package = "fk.prof.aggregation.proto";
option java_outer_classname = "AggregatedProfileModel";

message RecorderInfo {
	required string ip = 1;
	required string hostname = 2;
	required string appId = 3;
	required string instanceGroup = 4;
	required string cluster = 5;
	required string instanceId = 6;
	required string processName = 7;
	required string vmId = 8;
	required string zone = 9;
	required string instanceType = 10;
}

enum WorkType {
	cpu_sample_work = 0;
	thread_sample_work = 1;
	monitor_contention_work = 2;
	monitor_wait_work = 3;
	ctx_switch_trace_work = 4;
}

message TraceCtxNames {
	repeated string name = 1;
}

// Additional properties computed for the context
message TraceCtxDetail {
	required uint32 traceIdx = 1;
	optional uint32 sampleCount = 2;
}

// List of all trace contexts. 
message TraceCtxDetailList {
	repeated TraceCtxDetail traceCtx = 1;
}

// Status at the end of the aggregation window.
enum AggregationStatus {
	Completed = 0;	
	Retried = 1;		// may have duplicated samples because of retries 
	Aborted = 2; 		// may not have all samples because recorder sent them too late.
	Scheduled = 3;   	// no samples
	Corrupt = 4;     	// in case of corrupt data received
	Incomplete = 5;		// in case of end marker not received or connection error
}

message ProfileWorkInfo {	
	optional uint32 startOffset = 1;				// offset in seconds from the current header.aggregationStartTime
	optional uint32 duration = 2;
	optional uint32 recorderVersion = 3;
	optional RecorderInfo recorderInfo = 7;
	repeated SampleCount sampleCount = 4;
	required AggregationStatus status = 5;
	repeated TraceCtxToCoveragePctMap traceCoverageMap = 6;

	message TraceCtxToCoveragePctMap {
		required uint32 traceCtxIdx = 1;
		required float coveragePct = 2;
	}

	message SampleCount {
		optional WorkType workType = 1;
		required uint32 sampleCount = 2;
	}
}

message MethodLookUp {
	repeated string fqdn = 1;
}

// Represents the node of the stackTrace tree. Each node has methodId, line no.
// childCount and the associated data.
message FrameNode {
	required uint32 methodId = 1;
	required uint32 childCount = 2;
	optional uint32 lineNo = 3;
	optional CPUSamplingNodeProps cpuSamplingProps = 4;
	optional CtxSwitchNodeProps ctxSwitchProps = 5;
}

// StacktraceTree is traversed in dfs manner and serialized to a set of FrameNodeList
message FrameNodeList {
	required uint32 traceCtxIdx = 1;
	repeated FrameNode frameNodes = 2;
}

message CPUSamplingNodeProps {
	optional uint32 onCpuSamples = 1;
	optional uint32 onStackSamples = 2;
}

message CtxSwitchNodeProps {
	optional uint32 volCount = 1;
	optional uint32 volMigrations = 2;
	optional uint64 volTotalLatency = 3;

	optional uint32 involCount = 4;
	optional uint32 involMigrations = 5;
	optional uint64 involTotalLatency = 6;

	optional bytes volLatencyDigest = 7;
	optional bytes volWakeupLagDigest = 8;
	optional bytes involLatencyDigest = 9;

	repeated SyscallProps syscalls = 10;
}

message SyscallProps {
	optional int64 syscallId = 1;
	optional uint32 count = 2;
	optional uint64 totalLatency = 3;
	optional bytes latencyDigest = 4;
}

message Header {
	required uint32 formatVersion = 1;
	optional string appId = 2;
	optional string clusterId = 3;
	optional string procId = 4;
	optional string aggregationStartTime = 5;				// iso8601 string
	optional string aggregationEndTime = 6;					// iso8601 string
	optional WorkType workType = 7;
	optional uint32 windowDuration = 8;
}
